💄(person) style persons list and fix minor layout feedbacks
The persons list page can be visited by editing the url. It should
look decent.

This commit add a new person list template, a new person glimpse
template and use it to represent person in list and plugin. Also fix
minor feedbacks about grey color used as global page background that
was too light compared to the one from funmooc and course list for
glimpse without cover.

And finally we enabled Categories and Persons page in header menu
from demo site.

--- a/src/frontend/scss/templates/courses/cms/_course_detail.scss
+++ b/src/frontend/scss/templates/courses/cms/_course_detail.scss
@@ -45,7 +45,6 @@ $richie-course-detail-socialnetworks-fontcolor: $white !default;
 $richie-course-detail-team-gutter: 0.5rem !default;
 $richie-course-detail-team-width-large: 100% !default;
 $richie-course-detail-team-title-fontsize: 1.4rem !default;
-$richie-course-detail-team-title-fontcolor: $dodgerblue5 !default;
 
 $richie-course-detail-license-margin: 1rem 0 0 0 !default;
 $richie-course-detail-license-title-margin: 0 0 0.75rem 0 !default;
@@ -297,7 +296,7 @@ $richie-course-detail-aside-main-org-background: $white !default;
         @include sv-flex(1, 0, 100%);
       }
 
-      .person-plugin {
+      .person-glimpse {
         @include sv-flex(
           1,
           0,
@@ -318,7 +317,6 @@ $richie-course-detail-aside-main-org-background: $white !default;
 
         &__content__title {
           font-size: $richie-course-detail-team-title-fontsize;
-          color: $richie-course-detail-team-title-fontcolor;
           text-transform: uppercase;
         }
       }
@@ -399,6 +397,9 @@ $richie-course-detail-aside-main-org-background: $white !default;
 
     &__cover {
       margin-top: 1.4rem;
+      @include media-breakpoint-up($richie-course-detail-breakpoint) {
+        margin-top: unset;
+      }
 
       img {
         display: block;
